# tapi

./: CMakeLists.txt  Readme.md
include/tapi/Driver/: Options.h
lib/: CMakeLists.txt
lib/Core/: CMakeLists.txt  Configuration.cpp  FileManager.cpp  MachODylibReader.cpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/Archive/: merge.test
test/Driver/: help-hidden.test  snapshot.test
test/Inputs/: CMakeLists.txt
test/Inputs/AvailabilityTest/: AvailabilityTest.h  AvailabilityTest.m
test/Inputs/Bundle/: CMakeLists.txt
test/Inputs/CPP1/: CPP.h  CPP1.cpp
test/Inputs/CPP2/: Templates.h
test/Inputs/CPP3/: CPP3.cpp  VTable.h
test/Inputs/CPP4/: CPP4.cpp  Templates.h
test/Inputs/Export/: NonExport.m
test/Inputs/Reexport/: Header1.h
test/Inputs/Simple/: Basic.h  (+2 more)
test/Inputs/UnknownPlatform/: CMakeLists.txt
test/InstallAPI/: commandline.test  simple.test  version.test
test/Outputs/: Version.tbd  Version2.tbd
test/SDKDB/: arch-diff.test  bundle.test  objc-class-export.test  simple.test  subframeworks.test
test/Scan/: simple.test
test/Stubify/: inlining.test  swift_version.test  unknown_platform.test
test/tapi-run/: tapi-run.test
tools/: CMakeLists.txt
tools/libtapi/: CMakeLists.txt  LinkerInterfaceFile.cpp
unittests/: CMakeLists.txt
unittests/FileSystem/: CMakeLists.txt  FileSystem.cpp
unittests/Path/: CMakeLists.txt
unittests/SDKDB/: CMakeLists.txt  SDKDB_v1.cpp
unittests/libtapi/: CMakeLists.txt  LinkerInterfaceFileTest_TBD_v1.cpp  LinkerInterfaceFileTest_TBD_v2.cpp  VersionTest.cpp
utils/buildit/: Project.mk  build_tapi
(+11 files in other folders)
